# dataTool_2602

./: .bkit-memory.json  .gitignore  battery_tool_usage_guide.py  pyproject.toml  run_battery_tool.py  test_pipeline.py  버튼_기능_최적화_비교분석.md
!bak/battery_tool/: __main__.py
!bak/origin_datatool_dev260129/: BatteryDataTool.py
BatteryDataTool/: BatteryDataTool.py
BatteryDataTool _260205/: BatteryDataTool.py  build_exe.bat  build_ui.bat
BatteryDataTool copy/: BatteryDataTool.py
BatteryDataTool copy 2/: BatteryDataTool.py  BatteryDataTool_backup_20260204.py
BatteryDataTool_GP/: BatteryDataTool.py
BatteryDataTool_Optimized/: BatteryDataTool.py  find_line.py  verify_smoothing.py
battery_tool/: run_battery_tool.py
battery_tool/analysis/: __init__.py  dvdq_analysis.py
battery_tool/data_processing/: __init__.py  (+2 more)
battery_tool_library/: __init__.py
dataprocess/: pipeline.py
docs/: CHANGELOG.md  Change_Log_KR.md  Optimization_Report_20260202.md  function_code_comparison_report.md  refactoring_comparison_report.md
origin_datatool/: BatteryDataTool.py
origin_datatool copy/: BatteryDataTool.py
origin_datatool_dev/: BatteryDataTool.py
scripts/: extract_gui_classes.py
smoothing_ref/: BatteryData_class_Simple.py  Lib_LKS_BatteryData.py  Lib_LKS_common.py  Lib_LKS_denoise.py  Lib_LKS_units.py  compare_dt_versions.py  compare_fitting_options.py  compare_smoothing_methods.py  plot_raw_data.py  test_smoothing_comparison.py  ★☆★ BatteryData class (CHC 실제 적용 ver.) ★☆★.py  ★☆★ BatteryData class (FC 실제 적용 ver.) ★☆★.py  ★☆★ BatteryData class (Simple ver.) ★☆★.py
(+119 files in other folders)
