[project]
name = "dataprocess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "glob2>=0.7",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyodbc>=5.3.0",
    "pyqt6>=6.10.2",
    "scipy>=1.17.0",
    "xlwings>=0.33.20",
]
